<resources>
    <string name="app_name">MyDouYin</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_follow_with_interest">关注</string>
    <string name="title_news">消息</string>
    <string name="title_me">我</string>
    <string name="tui_jian">推荐</string>
    <string name="same_city">同城</string>
    <string name="zero">0</string>
</resources>
